Bug 12073: don't show link URLs when printing Bootstrap OPAC detail page
On OPAC Bootstrap detail page, by clicking Print link on the right the
page is printed. But the printed page contains HTML <a> anchors URL
attribute. It's useless, and unreadable. It isn't the case with prog
theme.

This patch hides all <a> href attributes when printing any OPAC page.

Works as described and improves the printed detail page's readability.
Currently there is no less file for the print.css.

(cherry picked from commit fe8242fc0383f9bafe1ead9033926c405ee5dfbe)

--- a/koha-tmpl/opac-tmpl/bootstrap/css/print.css
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/print.css
@@ -13,6 +13,8 @@ a:hover {
 	text-decoration: none;
 }
 
+a[href]:after { display:none; }
+
 body {
 	background-color : #FFF;
 	color : #333333;
